tests/InvalidSyntax/superOutsideMethod.ts
import b from './b';
import a from './a';

function F() { super(); }
